# DeltaNeutral

./: .gitignore  Dockerfile  README.md  funding_history.db  package-lock.json  pyproject.toml  settings.py
backend/: api_client.py  config.py  download_data.py  fill_db.py  settings.py
backend/crud/: crud_funding.py  crud_interest.py  crud_open_interest.py
backend/data_access/: api_client.py
backend/data_access/api_client/: bybit_client.py
backend/data_access/crud/: crud_funding.py  crud_interest.py  crud_open_interest.py
backend/models/: models_api.py  models_orm.py
backend/services/: download_data.py
backend/tests/: test_client.py  test_crud_funding.py  test_crud_interest.py  test_crud_open_interest.py  test_models_api.py  test_models_orm.py
backend/tests/data_access/api_client/: test_client.py
backend/tests/data_access/crud/: test_crud_interest.py  test_crud_open_interest.py
backend/tests/models/: conftest.py  test_models_api.py  test_models_orm.py
dashboard/: app.py  page_layout.py
dashboard/assets/: dark_mode.css
dashboard/utils/: styling.py
dashboard/views/: basis_trade.py  basis_trade_leveraged.py  ethbtcusdt.py
db/: api_client.py  download_data.py  fill_db.py
db/crud/: crud_funding.py  crud_interest.py  crud_open_interest.py
db/models/: models_orm.py
db/tests/: test_client.py  test_crud_funding.py  test_crud_interest.py  test_crud_open_interest.py  test_models_api.py  test_models_orm.py
frontend/: app.py  page_layout.py  settings.py
frontend/assets/: carousel_indicator.css
frontend/src/callbacks/: load_carousel_callback.py
frontend/src/components/: components_id_tree.py  graph_layout.py
frontend/src/components/tabs/: basis_trade.py  basis_trade_leveraged.py  ethbtcusdt.py  short.py  tab_layout.py
frontend/src/data_handling/: data_handling_basis_trade.py  data_handling_basis_trade_leveraged.py  data_handling_ethbtcusdt.py
frontend/src/layouts/: page_layout.py
frontend/src/utils/: styling.py
frontend/tests/: test_load_carousel_callbacks.py
frontend/tests/callbacks/: conftest.py  test_load_carousel_callbacks.py
frontend/views/: basis_trade.py  basis_trade_leveraged.py  ethbtcusdt.py  short.py
