[tool.poetry]
name = "funding"
version = "0.1.0"
description = "A dashboard showing all relevant data of my trades"
authors = ["Markus Musch <markus-musch@web.de>"]
packages = [
    { include = "db" }
]

[tool.poetry.dependencies]
python = "^3.12"
dash = "^2.18.0"
matplotlib = "^3.9.2"
numpy = "^2.1.1"
pydantic = "^2.9.0"
requests = "^2.32.3"
sqlalchemy = "^2.0.34"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "db/tests"
]